--- a/main.css
+++ b/main.css
@@ -53,7 +53,7 @@ ul>li {
 .hero {
     height: 100vh;
     min-height: 650px;
-    background: url(/images/web-ready/bg/hero.jpg) center center / cover no-repeat;
+    background: url(./images/web-ready/bg/hero.jpg) center center / cover no-repeat;
     /*background-image: url(/images/web-ready/bg/hero.jpg);
     background-position: center center;
     background-size: cover;
@@ -221,7 +221,7 @@ header {
 }
 
 .fade-slider__item--style-tshirts {
-    background-image: url(/images/web-ready/content/hero/slider_pic_1.png);
+    background-image: url(./images/web-ready/content/hero/slider_pic_1.png);
 }
 
 .fade-slider__item--style-tshirts .fade-slider__text {
@@ -232,7 +232,7 @@ header {
 }
 
 .fade-slider__item--style-games {
-    background-image: url(/images/web-ready/content/hero/slider_pic_2.png);
+    background-image: url(./images/web-ready/content/hero/slider_pic_2.png);
 }
 
 .fade-slider__item--style-games .fade-slider__text {
@@ -246,7 +246,7 @@ header {
    }
 
 .fade-slider__item--style-presents {
-    background-image: url(/images/web-ready/content/hero/slider_pic_3.png);
+    background-image: url(./images/web-ready/content/hero/slider_pic_3.png);
 }
 
 .fade-slider__item--style-presents .fade-slider__text {
@@ -464,7 +464,7 @@ filter__item {
     flex: 1;
     overflow: hidden;
     margin-right: 30px;
-    background: url(images/web-ready/bg/pattern.png) center center / 500px;
+    background: url(./images/web-ready/bg/pattern.png) center center / 500px;
     position: relative;
 }
 
@@ -480,11 +480,11 @@ filter__item {
 }
 
 .collections__item--type-guys:before{
-    background-image: url('/images/web-ready/collections/collection_man.png');
+    background-image: url('./images/web-ready/collections/collection_man.png');
 }
 
 .collections__item--type-girls:before{
-    background-image: url('/images/web-ready/collections/collection_woman.png');
+    background-image: url('./images/web-ready/collections/collection_woman.png');
     top: -31%;
     width: 80%;
     left: -25%;
@@ -615,7 +615,7 @@ filter__item {
 
 .extras__col-socials {
     height: 100%;
-    background: url(images/web-ready/bg/pattern.png) center center / 500px;
+    background: url(./images/web-ready/bg/pattern.png) center center / 500px;
     display: flex;
     align-items: center;
     justify-content: center;
